Added Grid Config